--- a/public/auth.html
+++ b/public/auth.html
@@ -27,6 +27,10 @@
         </div>
 
         <form class="form login hidden">
+            <div class="spinner hidden">
+                <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
+                <span class="sr-only">Loading...</span>
+            </div>
             <h3>Inicia sesión</h3>
             <div class="alert alert-danger alert-dismissible fade show hidden" role="alert">
                 <strong>¡Oh no!</strong> <span class="msgError"></span>
@@ -40,6 +44,10 @@
         </form>
 
         <form class="form register">
+            <div class="spinner hidden">
+                <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
+                <span class="sr-only">Loading...</span>
+            </div>
             <h3>Regístrate</h3>
             <div class="alert alert-danger alert-dismissible fade show hidden" role="alert">
                 <strong>¡Oh no!</strong> <span class="msgError"></span>
