--- a/public/index.html
+++ b/public/index.html
@@ -103,68 +103,7 @@
     <!-- Artículos -->
     <div class="articulos">
         <h3 class="titles2">Aquí hay algunos de nuestros articulos más recientes</h3>
-        <div class="row ulArticulos">
-            <div id="articulo1" class="articulo col-sm hidden">
-                <img src="./img/articulo.png" alt="Img de artículo">
-                <br>
-                <a href="#" title="idDeCategoria" class="categoria">Categoría: <span
-                        class="categoriaHttp">Categoría</span></a>
-                <br>
-                <p class="titleDad">
-                    <span class="title">Título:</span><span> El COVID-19 a todo dar por acá en estos
-                        rumbos</span>
-                </p>
-                <br>
-                <p class="contenido">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem rem ipsa fugiat!
-                    Suscipit velit architecto cor...
-                </p>
-                <p class="fecha">Jueves 13 de Octubre de 2021</p>
-                <button class="verMas btn btn-primary">
-                    <a href="#">Ver artículo completo</a>
-                </button>
-            </div>
-            <div id="articulo2" class="articulo col-sm hidden">
-                <img src="./img/articulo2.jpg" alt="Img de artículo">
-                <br>
-                <a href="#" title="idDeCategoria" class="categoria">Categoría: <span
-                        class="categoriaHttp">Categoría</span></a>
-                <br>
-                <p class="titleDad">
-                    <span class="title">Título:</span><span> El COVID-19 a todo dar por acá en estos
-                        rumbos</span>
-                </p>
-                <br>
-                <p class="contenido">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem rem ipsa fugiat!
-                    Suscipit velit architecto cor...
-                </p>
-                <p class="fecha">Jueves 13 de Octubre de 2021</p>
-                <button class="verMas btn btn-primary">
-                    <a href="#">Ver artículo completo</a>
-                </button>
-            </div>
-            <div id="articulo3" class="articulo col-sm hidden">
-                <img src="./img/articulo.png" alt="Img de artículo">
-                <br>
-                <a href="#" title="idDeCategoria" class="categoria">Categoría: <span
-                        class="categoriaHttp">Categoría</span></a>
-                <br>
-                <p class="titleDad">
-                    <span class="title">Título:</span><span> El COVID-19 a todo dar por acá en estos
-                        rumbos</span>
-                </p>
-                <br>
-                <p class="contenido">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem rem ipsa fugiat!
-                    Suscipit velit architecto cor...
-                </p>
-                <p class="fecha">Jueves 13 de Octubre de 2021</p>
-                <button class="verMas btn btn-primary">
-                    <a href="#">Ver artículo completo</a>
-                </button>
-            </div>
-        </div>
+        <div class="row ulArticulos"></div>
         <button class="btn btn-warning" role="button">
             <a href="#">Ver todos los artículos</a>
         </button>
