--- a/public/auth.html
+++ b/public/auth.html
@@ -23,7 +23,7 @@
     <div class="auth">
         <div class="googleAuth">
             <div class="g-signin2 googleButton" data-onsuccess="onSignIn"></div>
-            <a ondblclick="signOut();" href="#">Cerrar sesión</a>
+            <a id="cerrarSesion" href="#">Cerrar sesión</a>
         </div>
 
         <form class="form login hidden">
