--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
                     artículos para que nunca pierdas esos recuerdos...
                     <br>
                     <br>
-                    También puedes ver la calidad y la que consigues con nosotros al hcer para ti un sitio web
+                    También puedes ver la calidad que consigues con nosotros al hacer para ti un sitio web
                 </p>
                 <ul class="ulIntro">
                     <p>Aquí podrás hacer lo siguiente:</p>
