--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
             <div class="texto">
                 <h1>¡Bienvenid@!</h1>
                 <p>
-                    En este blog, podrás escribir tu propio "blog" y compartitlo con la comunidad, y así subir tus
+                    En este blog, podrás escribir tu propio "blog" y compartirlo con la comunidad, y así subir tus
                     artículos para que nunca pierdas esos recuerdos...
                     <br>
                     <br>
@@ -76,7 +76,7 @@
                     <li>Escribir tu propio blog</li>
                     <li>Mostrar a otros tus escritos</li>
                     <li>Conectar con otros blogueros</li>
-                    <li>Usar el método "Businnes" para tu empresa</li>
+                    <li>Usar el método "Bussines" para tu empresa</li>
                 </ul>
             </div>
             <img src="./img/welcome.png" class="animate__animated animate__bounceInDown"
@@ -108,7 +108,7 @@
 
     <!-- Porqué es bueno -->
     <div class="porqueNosotros">
-        <h3 class="titles">Porque nosotros...</h3>
+        <h3 class="titles">Por qué nosotros...</h3>
         <div class="porques">
             <div class="unPorque animate__animated hidden col-sm-4">
                 <h4>Diseño Responsive o Multiplataforma</h4>
@@ -123,7 +123,7 @@
                 <img src="./img/nosotros-2.png" alt="Disfruta de nuestros servicios para que crezcas tú y tu negocio">
                 <p>
                     Con nosotros podrá cambiar diseños, personalizarlo a su gusto y con opciones de tener un servidor
-                    Backend personalizado, que en un CMS no le sería tan fácil y que por suspuesto, aquí si...
+                    Backend personalizado, que en un CMS no le sería tan fácil y que por suspuesto, aquí sí...
                 </p>
             </div>
             <div class="unPorque animate__animated hidden col-sm-4">
@@ -152,7 +152,7 @@
                 <h4>Navega por el sitio</h4>
                 <a href="https://blogi-node.herokuapp.com/articulos/">Artículos</a>
                 <a href="https://blogi-node.herokuapp.com/categorias/">Categorías</a>
-                <a href="https://blogi-node.herokuapp.com/api/blog">Tu blog</a>
+                <a href="https://blogi-node.herokuapp.com/blog/articulos/#articulos">Tu blog</a>
                 <a href="https://blogi-node.herokuapp.com/foro/">Foro de la comunidad</a>
             </div>
             <div class="siguenos col-sm">
