--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./css/index.css">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
-    <title>Demo de Blog</title>
+    <title>Blogi | Demo de Blog</title>
     <meta name="description"
-        content="Un Blog que puedes para ver la calidad que consigues con nosotros al hacer para ti un sitio web. Y también puedes escribir en este blog para que nunca olvides tus recuerdos más importantes">
+        content="Blogi: Una demo o demostración de un blog en el que puedes para ver la calidad que consigues con nosotros al hacer para ti un sitio web. Y también puedes escribir en este blog para que nunca olvides tus recuerdos más importantes">
     <link rel="canonical" href="https://blogi-node.herokuapp.com">
 </head>
 
@@ -55,7 +55,7 @@
             </li>
         </ul>
     </nav>
-    <div class="toggle hidden"></div>
+    <div class="toggle"></div>
 
     <!-- Bienvenida-Intro -->
     <div class="bienvenida">
@@ -93,7 +93,7 @@
                 <h3>Usuario 1</h3>
                 <p>Sencillo y fácil de usar y muy cómodo de usar con buenos diseños</p>
             </div>
-            <div class="comentario animate__animated hidden col-sm">
+            <div id="deste" class="comentario animate__animated hidden col-sm">
                 <img src="./img/persona-2.png" alt="Usuario feliz">
                 <h3>Usuario 2</h3>
                 <p>Sencillo y fácil de usar y muy cómodo de usar con buenos diseños</p>
