--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
                     <li>Escribir tu propio blog</li>
                     <li>Mostrar a otros tus escritos</li>
                     <li>Conectar con otros blogueros</li>
-                    <li>Usar el método "Bussines" para tu empresa</li>
+                    <li>Usar el método <b>"Bussines"</b> para tu empresa</li>
                 </ul>
             </div>
             <img src="./img/welcome.png" class="animate__animated animate__bounceInDown"
