--- a/public/articulos/arts.html
+++ b/public/articulos/arts.html
@@ -5,18 +5,119 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="./css/arts.css">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <title>Artículo</title>
 </head>
 
 <body>
-    <h1>Hola mundo...</h1>
 
-    <script>
-        const params = new URLSearchParams(location.search);
-        const contract = params.get('id');
+    <nav class="navBar">
+        <div id="presentacion">
+            <img src="../img/logo.png" class="imgLogo" alt="Logo">
+            <span class="marca">Blogi</span>
+        </div>
+        <ul id="enlaces">
+            <li class="enlace">
+                <a href="#">
+                    Inicio
+                </a>
+            </li>
+            <li class="enlace buscador">
+                <i style="margin-left: 10px;" class="fa fa-search"></i>
+                <input type="text" name="buscar" id="buscar" placeholder="Busca artículos">
+            </li>
+            <li class="enlace">
+                <a href="../auth.html">
+                    <button>
+                        Inicar Sesión
+                    </button>
+                </a>
+            </li>
+            <li class="enlace">
+                <input type="checkbox" name="check" id="check">
+                <label for="check" class="modoOscuro"></label>
+            </li>
+        </ul>
+    </nav>
+    <div class="toggle"></div>
 
-        document.querySelector('h1').innerHTML = contract;
-    </script>
+    <div class="articulo">
+        <div class="cabecera">
+            <img src="../img/articulo2.jpg" alt="Portada de artículo">
+            <h3>Cómo mostrar imágenes</h3>
+        </div>
+        <div class="cuerpo">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis dolores animi quod sequi molestias
+                deserunt
+                voluptas saepe laboriosam quasi suscipit nobis libero vero amet, odit nihil adipisci necessitatibus vel
+                veniam?
+            </p>
+            <div class="costadoCategorias">
+                <ul>
+                    <li>JAJAJA</li>
+                    <li>JAJAJA</li>
+                    <li>JAJAJA</li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="row">
+                <div class="ayuda col-sm">
+                    <h4>Navega por el sitio</h4>
+                    <a href="https://blogi-node.herokuapp.com/articulos/">Artículos</a>
+                    <a href="https://blogi-node.herokuapp.com/categorias/">Categorías</a>
+                    <a href="https://blogi-node.herokuapp.com/blog/articulos/#articulos">Tu blog</a>
+                    <a href="https://blogi-node.herokuapp.com/foro/">Foro de la comunidad</a>
+                </div>
+                <div class="siguenos col-sm">
+                    <h4>Siguenos</h4>
+                    <div class="links">
+                        <a href="#">
+                            <i class="fa fa-facebook"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa fa-twitter"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa fa-instagram"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="elPapi col-sm">
+                    <h4>Desarrollador</h4>
+                    <p>Derek Pérez - Copyright 2021.</p>
+                    <p>v 1.0.0</p>
+                </div>
+            </div>
+        </footer>
+
+        <!-- Botones flotantes -->
+        <i class="fa fa-ellipsis-h abrirIconos animate__animated animate__bounceInRight"></i>
+        <div class="btnsFlotantes animate__animated hidden">
+            <!-- Whats -->
+            <i class="fa fa-whatsapp"></i>
+            <!-- Atención al cliente -->
+            <i class="fa fa-comments"></i>
+        </div>
+        <!-- Chatbot -->
+        <div class="chatbot hidden animate__animated">
+            <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+            <df-messenger
+                chat-icon="https:&#x2F;&#x2F;res.cloudinary.com&#x2F;chugus&#x2F;image&#x2F;upload&#x2F;v1635113376&#x2F;logo_nzedyn.png"
+                chat-title="Blogi" agent-id="cee427dc-5ff2-496f-be92-9c86bb86f9fb" language-code="es">
+            </df-messenger>
+        </div>
+    </div>
+
+    <script src="./js/arts.js"></script>
 </body>
 
 </html>
