--- a/public/articulos/arts.html
+++ b/public/articulos/arts.html
@@ -34,7 +34,7 @@
             <li class="enlace">
                 <a href="../auth.html">
                     <button>
-                        Inicar Sesión
+                        Iniciar Sesión
                     </button>
                 </a>
             </li>
