--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
             <li class="enlace">
                 <a href="./auth.html">
                     <button>
-                        Inicar Sesión
+                        Iniciar Sesión
                     </button>
                 </a>
             </li>
