--- a/public/index.html
+++ b/public/index.html
@@ -26,17 +26,17 @@
         </div>
         <ul id="enlaces">
             <li class="enlace">
-                <a href="#">
+                <a href="https://blogi-node.herokuapp.com/">
                     Inicio
                 </a>
             </li>
             <li class="enlace">
-                <a href="#">
+                <a href="https://blogi-node.herokuapp.com/posts/arts.html">
                     Ver artículos
                 </a>
             </li>
             <li class="enlace">
-                <a href="#">
+                <a href="https://blogi-node.herokuapp.com/posts/arts.html?=6186efa6cf94729df2c6fa9e">
                     <button>
                         Crear mi blog
                     </button>
@@ -138,10 +138,10 @@
 
     <!-- Artículos -->
     <div class="articulos">
-        <h3 class="titles">Aquí hay algunos de nuestros articulos más recientes</h3>
+        <h3 class="titles">Artículos que traen tutoriales para usar Blogi:</h3>
         <div class="row ulArticulos"></div>
         <button class="btn btn-warning" role="button">
-            <a href="https://blogi-node.herokuapp.com/articulos/">Ver todos los artículos</a>
+            <a href="https://blogi-node.herokuapp.com/posts/arts.html">Ver todos los artículos</a>
         </button>
     </div>
 
