--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
                 </a>
             </li>
             <li class="enlace">
-                <a href="https://blogi-node.herokuapp.com/posts/arts.html?=6186efa6cf94729df2c6fa9e">
+                <a href="https://blogi-node.herokuapp.com/auth.html">
                     <button>
                         Crear mi blog
                     </button>
@@ -152,7 +152,7 @@
                 <h4>Navega por el sitio</h4>
                 <a href="https://blogi-node.herokuapp.com/articulos/">Artículos</a>
                 <a href="https://blogi-node.herokuapp.com/categorias/">Categorías</a>
-                <a href="https://blogi-node.herokuapp.com/blog/articulos/#articulos">Tu blog</a>
+                <a href="https://blogi-node.herokuapp.com/blog/articulos/">Tu blog</a>
                 <a href="https://blogi-node.herokuapp.com/foro/">Foro de la comunidad</a>
             </div>
             <div class="siguenos col-sm">
