--- a/public/busquedas/index.html
+++ b/public/busquedas/index.html
@@ -9,15 +9,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="./css/blog.css">
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
-    <title>Blog</title>
+    <link rel="stylesheet" href="./index.css">
+    <title>Busquedas de artículos en Blogi</title>
 </head>
 
 <body>
 
     <!-- Spinner -->
-    <div class="spinner hidden">
+    <div class="spinner">
         <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
         <span class="sr-only">Loading...</span>
     </div>
@@ -53,66 +53,12 @@
     </nav>
     <div class="toggle"></div>
 
-    <div class="blog">
-        <div class="info">
-            <div class="left">
-                <span class="autorDeBlog">Autor del blog: <span class="blogDeUsuario"></span></span>
-                <span class="nombre"></span>
-                <span class="titulo"></span>
-                <span class="correoSpan">Correo:</span>
-                <span class="correo"></span>
-                <strong class="sobreMiStrong">Sobre mi:</strong>
-            </div>
-            <p class="sobreMi"></p>
-            <div class="misArticulos">
-                <strong>Mis artículos (<span class="totalDeArticulos"></span>):</strong>
-                <ul class="articulosUl">
+    <h1 style="margin-top: 100px; text-align: center;">Resultados de la búsqueda</h1>
 
-                </ul>
+    <ul class="articulos">
 
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination pagination-lg justify-content-center">
+    </ul>
 
-                    </ul>
-                </nav>
-            </div>
-        </div>
-        <div class="bloguero">
-            <img class="imgDePerfil" src="">
-            <div class="btnsGroup">
-                <a id="webLink" href="">
-                    <button class="btn btn-outline-secondary">
-                        <i class="fa fa-link" style="margin-right: 10px;"></i>
-                        <span id="web">Sitio web</span>
-                    </button>
-                </a>
-                <a id="twitterLink" href="">
-                    <button class="btn btn-outline-secondary">
-                        <i class="fa fa-twitter" style="margin-right: 10px;"></i>
-                        <span id="twitter">Twitter</span>
-                    </button>
-                </a>
-                <a id="facebookLink" href="">
-                    <button class="btn btn-outline-secondary">
-                        <i class="fa fa-facebook" style="margin-right: 10px;"></i>
-                        <span id="facebook">Facebook</span>
-                    </button>
-                </a>
-                <a id="linkedinLink" href="">
-                    <button class="btn btn-outline-secondary">
-                        <i class="fa fa-linkedin" style="margin-right: 10px;"></i>
-                        <span id="linkedin">Linkedin</span>
-                    </button>
-                </a>
-                <a id="youtubeLink" href="">
-                    <button class="btn btn-outline-secondary">
-                        <i class="fa fa-youtube-play" style="margin-right: 10px;"></i>
-                        <span id="youtube">Youtube</span>
-                    </button>
-                </a>
-            </div>
-        </div>
-    </div>
 
     <!-- Footer -->
     <footer class="footer">
@@ -163,8 +109,7 @@
         </df-messenger>
     </div>
 
-    <script src="./js/blog.js"></script>
-
+    <script src="./index.js"></script>
 </body>
 
 </html>
