--- a/public/busquedas/index.html
+++ b/public/busquedas/index.html
@@ -35,7 +35,7 @@
                 </a>
             </li>
             <li class="enlace buscador">
-                <i style="margin-left: 10px;" class="fa fa-search"></i>
+                <i style="margin-left: 10px; cursor: pointer;" class="btnBuscador fa fa-search"></i>
                 <input type="text" name="buscar" id="buscar" placeholder="Busca artículos">
             </li>
             <li class="enlace">
@@ -53,7 +53,7 @@
     </nav>
     <div class="toggle"></div>
 
-    <h1 style="margin-top: 100px; text-align: center;">Resultados de la búsqueda</h1>
+    <h1 style="margin-top: 115px; text-align: center;">Resultados de la búsqueda</h1>
 
     <ul class="articulos">
 
