--- a/public/auth.html
+++ b/public/auth.html
@@ -23,7 +23,7 @@
     <div class="auth">
         <div class="googleAuth">
             <div class="g-signin2 googleButton" data-onsuccess="onSignIn"></div>
-            <a id="cerrarSesion" href="#">Cerrar sesión</a>
+            <button class="btn btn-outline-primary w-100" id="cerrarSesion">Cerrar sesión</button>
         </div>
 
         <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
