--- a/public/foro/index.html
+++ b/public/foro/index.html
@@ -9,38 +9,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="./index.css">
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
-    <title>Configuración de tu blog</title>
+    <link rel="stylesheet" href="./index.css">
+    <title>Foro de Blogi</title>
 </head>
 
 <body>
 
-    <!-- Spinner -->
-    <div class="spinner hidden">
-        <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
-        <span class="sr-only">Loading...</span>
-    </div>
-
-    <div class="login hidden">
-        <div class="content">
-            <h1>Necesita tener una cuenta</h1>
-            <br>
-            <p>
-                Necesita una cuenta para ver su perfil, sino no podrá hacerlo... 😢
-                <br>
-                <br>
-                Así que se le redirigirá a la página de autenticación en 10 segundos.
-                <br>
-                <br>
-                O tal vez necesite volver a iniciar sesión
-            </p>
-            <br>
-            <a class="irARegister btn" href="">Ir a autenticación</a>
-        </div>
-    </div>
-
-    <!-- Navbar -->
+    <!-- NavBar -->
     <nav class="navBar">
         <div id="presentacion">
             <img src="../img/logo.png" class="imgLogo" alt="Logo">
@@ -48,21 +24,26 @@
         </div>
         <ul id="enlaces">
             <li class="enlace">
-                <a href="../../index.html">
+                <a href="https://blogi-node.herokuapp.com/">
                     Inicio
                 </a>
             </li>
             <li class="enlace">
-                <a href="../../posts/arts.html">
-                    <button style="padding: 5px 10px;">
-                        Ir a articulos
+                <a href="https://blogi-node.herokuapp.com/posts/arts.html">
+                    Ver artículos
+                </a>
+            </li>
+            <li class="enlace">
+                <a href="https://blogi-node.herokuapp.com/auth.html">
+                    <button>
+                        Crear mi blog
                     </button>
                 </a>
             </li>
             <li class="enlace">
-                <a href="../articulos/">
-                    <button style="padding: 5px 10px;">
-                        Ir a su blog
+                <a href="./auth.html">
+                    <button>
+                        Iniciar Sesión
                     </button>
                 </a>
             </li>
@@ -74,42 +55,43 @@
     </nav>
     <div class="toggle"></div>
 
-    <div class="config">
-        <h1>Configuración de su blog</h1>
-        <div class="configuraciones">
-            <label for="nombre">Nombre del blog:</label>
-            <input type="text" name="nombre" id="nombre" placeholder="El nombre de su blog">
-
-            <label for="descripcion">Descripción del blog:</label>
-            <textarea name="descripcion" rows="10" id="descripcion" placeholder="La descripcion de su blog"></textarea>
-
-            <span id="publicSpan">¿Quiére que cualquier persona pueda ver los artículos que sube de este blog?:</span>
-            <input type="checkbox" name="public" id="public">
-            <label id="boolean" for="public"></label>
-
-            <div class="hr"></div>
-
-            <div class="dangerZone">
-                <p>Zona de peligro:</p>
-
-                <label for="borrar">¿Quiere borrar este blog?</label>
-                <button class="btn btn-danger borrarBtn">Borrar blog</button>
-            </div>
-
-            <div class="windowDanger hidden">
-                <div class="contentBox">
-                    <p>Recuerde que esta es una acción <strong>irreversible</strong>...</p>
-                    <div class="btns">
-                        <button class="btn btn-primary cancelar">Cancelar</button>
-                        <button class="btn btn-danger borrarDefinitivamente">Borrar</button>
-                    </div>
+    <div class="foro">
+        <div class="intro">
+            <div class="left">
+                <strong>Busca una discusión en nuestro foro</strong>
+                <p>Pregunta y habla con otros blogueros sobre temas que tengan que ver con Blogi, como por ejemplo,
+                    entender o preguntar por funciones de blogi</p>
+                <br>
+                <div class="buscador">
+                    <i class="fa fa-search"></i>
+                    <input type="text" name="search" id="search" placeholder="Busca alguna discusión">
                 </div>
             </div>
-
-            <button class="guardar btn btn-warning mt-5" style="font-size: 22px;">Guardar</button>
+            <div class="right">
+                <img src="../img/foro.png" alt="Nuestro foro es bueno para ti">
+            </div>
+        </div>
+        <h1 class="titles">Discusiones recientes:</h1>
+        <div class="recientes">
+            <div class="reciente">
+                <div class="left">
+                    <img src="../img/persona-2.png" alt="Usuario que empezó la discusión">
+                    <div class="heart">
+                        <i class="fa fa-heart"></i>
+                        <span class="hertCantity">5</span>
+                    </div>
+                </div>
+                <div class="resto">
+                    <span class="titulo">Como recortar imágenes en Blogi si no quiero toda la imágen</span>
+                    <span class="contenido">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum eum hic quisquam, ad enim at odio
+                        harum officia quae quod molestiae vero eius.
+                    </span>
+                    <span>Tema: <span class="ctg">Historia y Arte</span></span>
+                </div>
+            </div>
         </div>
     </div>
-
 
     <!-- Footer -->
     <footer class="footer">
@@ -151,7 +133,6 @@
         <!-- Atención al cliente -->
         <i class="fa fa-comments"></i>
     </div>
-
     <!-- Chatbot -->
     <div class="chatbot hidden animate__animated">
         <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
@@ -162,7 +143,6 @@
     </div>
 
     <script src="./index.js"></script>
-
 </body>
 
 </html>
