--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 
 <body>
 
+    <!-- NavBar -->
     <nav class="navBar">
         <div id="presentacion">
             <img src="./img/logo.png" class="imgLogo" alt="Logo">
@@ -76,7 +77,6 @@
                     <li>Escribir tu propio blog</li>
                     <li>Mostrar a otros tus escritos</li>
                     <li>Conectar con otros blogueros</li>
-                    <li>Usar el método <b>"Bussines"</b> para tu empresa</li>
                 </ul>
             </div>
             <img src="./img/welcome.png" class="animate__animated animate__bounceInDown"
@@ -150,9 +150,9 @@
         <div class="row">
             <div class="ayuda col-sm">
                 <h4>Navega por el sitio</h4>
-                <a href="https://blogi-node.herokuapp.com/articulos/">Artículos</a>
-                <a href="https://blogi-node.herokuapp.com/categorias/">Categorías</a>
+                <a href="https://blogi-node.herokuapp.com/posts/arts.html#6186efa6cf94729df2c6fa9e">Tutoriales</a>
                 <a href="https://blogi-node.herokuapp.com/blog/articulos/">Tu blog</a>
+                <a href="https://blogi-node.herokuapp.com/posts/arts.html">Tutoriales</a>
                 <a href="https://blogi-node.herokuapp.com/foro/">Foro de la comunidad</a>
             </div>
             <div class="siguenos col-sm">
